--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
 # Use an official Java runtime as a parent image
-FROM openjdk:11-jre-slim
+FROM openjdk:17
 
 # Set the working directory
 WORKDIR /app
 
 # Copy the project jar file to the container
-COPY bplanner.jar app.jar
+COPY ./target/bplanner-0.0.1-SNAPSHOT.jar app.jar
 
 # Expose the port that your application runs on
 EXPOSE 8080
