--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       POSTGRES_DB: budget_planner
       POSTGRES_USER: budget_user
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: password123
     ports:
       - "5432:5432"
 
